# tetris-c

./: .gitignore  Dockerfile  LICENSE  Makefile  Makefile.am  README.org  ai.c  block.c  build.sh  configure.ac  docker-compose.yaml  evolution.c  game.c  grid.c  install.sh  main.c  old-patch  poc.lisp  shape.c  shapes.in  tetris-ncurses.c  tetris-play.c  tetris.c  tetris.h  tetris_ai.h  wip-patch
data/: Makefile.am  default_weights.in  default_weights.tsv  shapes.in
misc/: prof-deps.sh
nginx/: Dockerfile  tetris
service/: .gitignore  Makefile  README.org  build.sh  infarray.lisp  libtetris.lisp  main.lisp  repl-load.lisp  server.lisp  shapes.in  test.lisp  tetris.asd  util.lisp  ws.lisp
service/back/: poc.lisp
service/doc/: README.org
service/front/: README.org  index.html  perf.js  tetris.html  tetris_client.js  util.js
service/html/: tetris.html
service/prof/: downloadData.js  profiling.lisp
service/test/: infarray-test.lisp  libtetris-test.lisp  repl-load.lisp  server-test.lisp
service/www/: index.html  tetris_client.js
service/www/js/: tetris_client.js
src/: Makefile.am  ai.c  evolution.c  game.c  grid.c  shape.c  tetris-ncurses.c  tetris-play.c  tetris.c  tetris.h  tetris_ai.h
tetris/: Dockerfile  autogen.sh  build.sh
tetris/service/: README.org  default_weights.in  libtetris.lisp  main.lisp  server.lisp  tetris.asd  util.lisp  ws.lisp
tetris/service/prof/: prof.out  ws-latency-data.txt
tetris/service/test/: server-test.lisp
tetris/service/www/js/: tetris_client.js
tetris/src/: ai.c  block.c  evolution.c  tetris-play.c
